added public_class Tests

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-dependencies {
-    testImplementation ()
-}
+//dependencies {
+//    testImplementation ()
+//}
 
